# mcp-dev-servers

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/plans/: 2026-03-01-rust-tools-design.md  2026-03-01-rust-tools-plan.md
docs/superpowers/plans/: 2026-04-30-mcp-tool-backlog-implementation.md
docs/superpowers/specs/: 2026-04-30-mcp-tool-backlog-design.md
src/: dotnet_mcp.py  git_mcp.py  github_mcp.py  ollama_mcp.py  rust_mcp.py  template_sync_mcp.py
src/mcp_dev_servers/: dotnet_mcp.py  git_mcp.py  github_mcp.py  ollama_mcp.py  python_tools_mcp.py  rust_mcp.py  template_sync_mcp.py
tests/: test_smoke.py  test_template_sync_paths.py
